more heroku stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ script:
 deploy:
   provider: heroku
   api_key:
-    secure: "f5fe67ee-ef70-4871-8a54-6482938ac60e"
+    secure: f5fe67ee-ef70-4871-8a54-6482938ac60e
+  app: weather3140
+  on:
+    repo: richy163/cisc3140
